--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <div ui-view></div>
+  <div class="container" ui-view></div>
   
   <script src="js/main.js"></script>
 </body>
